--- a/.config
+++ b/.config
@@ -398,7 +398,7 @@ CONFIG_FEED_telephony=y
 CONFIG_FEED_helloworld=y
 CONFIG_FEED_kenzok=y
 CONFIG_FEED_small=y
-# CONFIG_FEED_sirpdboy is not set
+# CONFIG_FEED_opentopd is not set
 
 #
 # Base system
