--- a/.config
+++ b/.config
@@ -398,7 +398,8 @@ CONFIG_FEED_telephony=y
 CONFIG_FEED_helloworld=y
 CONFIG_FEED_kenzok=y
 CONFIG_FEED_small=y
-# CONFIG_FEED_opentopd is not set
+CONFIG_FEED_dockerman=y
+CONFIG_FEED_docker=y
 
 #
 # Base system
@@ -4602,8 +4603,8 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 #
 # 4. Themes
 #
-# CONFIG_PACKAGE_luci-theme-argon is not set
-# CONFIG_PACKAGE_luci-theme-argon_new is not set
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon_new=y
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_luci-theme-edge is not set
@@ -6348,7 +6349,7 @@ CONFIG_PACKAGE_dbus=y
 # CONFIG_PACKAGE_dmesg is not set
 CONFIG_PACKAGE_docker-ce=y
 CONFIG_DOCKER_KERNEL_OPTIONS=y
-CONFIG_DOCKER_SECCOMP=y
+# CONFIG_DOCKER_SECCOMP is not set
 CONFIG_DOCKER_RES_SHAPE=y
 
 #
