--- a/.config
+++ b/.config
@@ -4613,7 +4613,7 @@ CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_luci-theme-material is not set
 # CONFIG_PACKAGE_luci-theme-netgear is not set
 CONFIG_PACKAGE_luci-theme-opentomato=y
-CONFIG_PACKAGE_luci-theme-opentomcat=y
+# CONFIG_PACKAGE_luci-theme-opentomcat is not set
 CONFIG_PACKAGE_luci-theme-opentopd=y
 # end of 4. Themes
 
