--- a/.config
+++ b/.config
@@ -399,6 +399,7 @@ CONFIG_FEED_helloworld=y
 CONFIG_FEED_kenzok=y
 CONFIG_FEED_small=y
 CONFIG_FEED_lisaac=y
+CONFIG_FEED_passwall=y
 
 #
 # Base system
