--- a/.config
+++ b/.config
@@ -399,7 +399,6 @@ CONFIG_FEED_helloworld=y
 CONFIG_FEED_kenzok=y
 CONFIG_FEED_small=y
 CONFIG_FEED_lisaac=y
-CONFIG_FEED_xiaorouji=y
 
 #
 # Base system
@@ -4458,6 +4457,7 @@ CONFIG_PACKAGE_luci-app-dockerman=y
 # CONFIG_PACKAGE_luci-app-dump1090 is not set
 # CONFIG_PACKAGE_luci-app-dynapoint is not set
 # CONFIG_PACKAGE_luci-app-e2guardian is not set
+# CONFIG_PACKAGE_luci-app-easymesh is not set
 # CONFIG_PACKAGE_luci-app-eqos is not set
 # CONFIG_PACKAGE_luci-app-familycloud is not set
 CONFIG_PACKAGE_luci-app-filetransfer=y
