--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -14,6 +14,9 @@ name: Update Checker
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
+  REPO_URL_SSRPLUS: https://github.com/fw876/helloworld
+  REPO_URL_PASSWALL: https://github.com/xiaorouji/openwrt-passwall
+  REPO_BRANCH_PASSWALL: main
 
 on:
   workflow_dispatch:
