--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -51,7 +51,14 @@ jobs:
       with:
         token: ${{ secrets.RELEASES_TOKEN }}
         event-type: lede Source Code Update
+        
+    - name: Source Code Update notification
+      if: steps.cacheHash.outputs.cache-hit != 'true'
+      run: |
+        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}lede源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
 
+  
+  
   ssrplus:
     runs-on: ubuntu-latest
 
@@ -79,6 +86,11 @@ jobs:
       with:
         token: ${{ secrets.RELEASES_TOKEN }}
         event-type: ssrplus Source Code Update
+        
+    - name: Source Code Update notification
+      if: steps.cacheHash.outputs.cache-hit != 'true'
+      run: |
+        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}ssrplus源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
 
   passwall:
     runs-on: ubuntu-latest
@@ -107,3 +119,8 @@ jobs:
       with:
         token: ${{ secrets.RELEASES_TOKEN }}
         event-type: passwall Source Code Update
+
+    - name: Source Code Update notification
+      if: steps.cacheHash.outputs.cache-hit != 'true'
+      run: |
+        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}passwall源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
