--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -52,10 +52,10 @@ jobs:
         token: ${{ secrets.RELEASES_TOKEN }}
         event-type: lede Source Code Update
         
-    - name: Source Code Update notification
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      run: |
-        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}lede源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+   # - name: Source Code Update notification
+   #   if: steps.cacheHash.outputs.cache-hit != 'true'
+   #   run: |
+   #     curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}lede源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
 
   
   
@@ -87,10 +87,10 @@ jobs:
         token: ${{ secrets.RELEASES_TOKEN }}
         event-type: ssrplus Source Code Update
         
-    - name: Source Code Update notification
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      run: |
-        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}ssrplus源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+ #   - name: Source Code Update notification
+ #     if: steps.cacheHash.outputs.cache-hit != 'true'
+ #     run: |
+ #       curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}ssrplus源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
 
   passwall:
     runs-on: ubuntu-latest
@@ -120,7 +120,7 @@ jobs:
         token: ${{ secrets.RELEASES_TOKEN }}
         event-type: passwall Source Code Update
 
-    - name: Source Code Update notification
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      run: |
-        curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}passwall源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+   # - name: Source Code Update notification
+   #   if: steps.cacheHash.outputs.cache-hit != 'true'
+   #   run: |
+   #     curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}passwall源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
