--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -12,7 +12,7 @@
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL_LEDE: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
 
 on:
