--- a/.config
+++ b/.config
@@ -5424,7 +5424,7 @@ CONFIG_PACKAGE_openssh-sftp-avahi-service=y
 CONFIG_PACKAGE_openssh-sftp-client=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_sshtunnel=y
-CONFIG_PACKAGE_tmate=y
+# CONFIG_PACKAGE_tmate is not set
 # end of SSH
 
 #
@@ -6845,3 +6845,5 @@ CONFIG_PACKAGE_uuidgen=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+
+CONFIG_OVERRIDE_PKGS="kcptun"
