--- a/ziyong.config
+++ b/ziyong.config
@@ -3930,7 +3930,7 @@ CONFIG_OPENSSL_WITH_SM234=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_ENGINE_BUILTIN=y
 # CONFIG_OPENSSL_ENGINE_BUILTIN_AFALG is not set
-# CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO is not set
+CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO=y
 CONFIG_PACKAGE_libopenssl-afalg_sync=y
 
 #
