--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -207,7 +207,8 @@ jobs:
         SW_FLOWOFFLOAD: 0
         HW_FLOWOFFLOAD: 0
         SFE_FLOW: 0
-        artifacts: ${{ env.FIRMWARE }}/*
+         echo "PACKAGED_OUTPUTPATH=${PWD}/output" >> $GITHUB_ENV
+         echo "::set-output name=status::success"
         
     - name: copy update files
       run: |
