--- a/.github/workflows/Selfuse.yml
+++ b/.github/workflows/Selfuse.yml
@@ -207,8 +207,9 @@ jobs:
         SW_FLOWOFFLOAD: 0
         HW_FLOWOFFLOAD: 0
         SFE_FLOW: 0
-         echo "PACKAGED_OUTPUTPATH=${PWD}/output" >> $GITHUB_ENV
-         echo "::set-output name=status::success"
+        SELECT_PACKITPATH: openwrt_packit
+        SELECT_OUTPUTPATH: output
+        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         
     - name: copy update files
       run: |
@@ -231,7 +232,7 @@ jobs:
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.1.0
       with:
-         keep_latest: 3
+         keep_latest: 4
          delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
