--- a/OpenWrt_Selfuse.config
+++ b/OpenWrt_Selfuse.config
@@ -6315,7 +6315,7 @@ CONFIG_PACKAGE_parted=y
 # Filesystem
 #
 # CONFIG_PACKAGE_acl is not set
-CONFIG_PACKAGE_antfs-mount=y
+# CONFIG_PACKAGE_antfs-mount is not set
 CONFIG_PACKAGE_attr=y
 # CONFIG_PACKAGE_badblocks is not set
 CONFIG_PACKAGE_btrfs-progs=y
